fix: drawer bottom spacing is too small in Firefox

--- a/packages/app/src/components/views/style.less
+++ b/packages/app/src/components/views/style.less
@@ -1,5 +1,7 @@
 .ant-drawer-body {
-  padding-bottom: 50px;
+  > div {
+    margin-bottom: 50px;
+  }
   .form-button-group {
     position: absolute;
     bottom: 0;
